# TodoApi

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m01_create_todo_table.rs  m02_create_user_table.rs  m20220101_000001_create_todo_table.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_todo_table.rs
src/: errorhand.rs  main.rs  todo_item.rs
src/entities/: mod.rs  prelude.rs  todo_item.rs  user.rs
src/routes/todo_item/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs  todoitemdto.rs
src/routes/user/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
