[package]
name = "TodoApi"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
log = "0.4.28"
log4rs = { version = "1.4.0", features = ["yaml_format"] }
rocket = { version = "0.5.1", features = ["json"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
